--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2088,6 +2088,10 @@
 
 /* Image */
 
+	.button-icon {
+		padding-left: 10px;
+	}
+
 	.image {
 		border: 0;
 		display: inline-block;
@@ -2665,6 +2669,16 @@
 	body {
 		padding-top: 6em;
 	}
+	
+	.mobile-only {
+		display: none;
+	}
+	
+	.menu-row {
+		padding-right: 1.5em;
+		font-size: 1.3em;
+		font-weight: bold;
+	}
 
 	#header {
 		-moz-align-items: center;
@@ -2695,8 +2709,8 @@
 		}
 		
 		#header .header-logo {
-			margin-top: 0.5em;
-			max-height: 55px;
+			margin-top: 0.6em;
+			height: 1.5em;
 		}
 
 		#header nav {
@@ -2725,7 +2739,7 @@
 				display: inline-block;
 			}
 
-				#header nav a[href="#menu"] {
+				#header a[href="#menu"] {
 					text-decoration: none;
 					-webkit-tap-highlight-color: transparent;
 					font-size: 2em;
@@ -2733,7 +2747,7 @@
 					z-index: 10005;
 				}
 
-					#header nav a[href="#menu"]:before {
+					#header a[href="#menu"]:before {
 						content: "";
 						-moz-osx-font-smoothing: grayscale;
 						-webkit-font-smoothing: antialiased;
@@ -2743,11 +2757,11 @@
 						text-transform: none !important;
 					}
 
-					#header nav a[href="#menu"] span {
+					#header a[href="#menu"] span {
 						display: none;
 					}
 
-					#header nav a[href="#menu"]:before {
+					#header a[href="#menu"]:before {
 						margin: 0 0.5em 0 0;
 					}
 
@@ -2755,6 +2769,11 @@
 
 		body {
 			padding-top: 44px;
+		}
+		
+		.mobile-only {
+			display: block;
+			float: right;
 		}
 
 		#header {
@@ -2796,10 +2815,10 @@
 /* Menu */
 
 	#menu {
-		-moz-transform: translateX(-20em);
-		-webkit-transform: translateX(-20em);
-		-ms-transform: translateX(-20em);
-		transform: translateX(-20em);
+		-moz-transform: translateX(20em);
+		-webkit-transform: translateX(20em);
+		-ms-transform: translateX(20em);
+		transform: translateX(20em);
 		-moz-transition: -moz-transform 0.5s ease, visibility 0.5s;
 		-webkit-transition: -webkit-transform 0.5s ease, visibility 0.5s;
 		-ms-transition: -ms-transform 0.5s ease, visibility 0.5s;
@@ -2812,7 +2831,7 @@
 		overflow-y: auto;
 		padding: 3em 2em;
 		position: fixed;
-		left: 0;
+		right: 0;
 		top: 0;
 		visibility: hidden;
 		width: 20em;
@@ -3220,3 +3239,40 @@
 				}
 
 		}
+		
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #ffffff;
+    min-width: 239px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+	top: 80px;
+}
+
+@media screen and (max-width: 1680px) {
+	.dropdown-content {
+		top: 70px;
+	}
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block !important;
+	line-height: 1.5em;
+}
+
+.dropdown-content a:hover {
+	background-color: #ddd
+}
+
+.display-dropdown {
+	display:block;
+}
