--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url(font-awesome.min.css);
+@import url(font-stylesheet.css);
 @import "https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:300,400|Pacifico";
 
 /*
@@ -3255,6 +3256,25 @@
 	top: 80px;
 }
 
+.small-logo {
+	max-height: 26px;
+	vertical-align: middle;
+	margin-right: 8px;
+	margin-left: 26px;
+}
+
+.actions img {
+	max-height: 46px;
+}
+
+.antivytrus {
+	font-family: "space_groteskregular"
+}
+
+.antivytrus-bold {
+	font-family: "space_groteskbold"
+}
+
 @media screen and (max-width: 1680px) {
 	.dropdown-content {
 		top: 70px;
@@ -3263,7 +3283,7 @@
 
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 10px 16px;
     text-decoration: none;
     display: block !important;
 	line-height: 1.5em;
@@ -3275,4 +3295,5 @@
 
 .display-dropdown {
 	display:block;
+	text-align: left;
 }
